# D2MOO

./: .gitignore  CLAUDE.md  CMakeLists.txt  D2MOO-Tool.ps1  LaunchD2MOO-Admin.bat  LaunchD2MOO.bat  LaunchPD2-Oracle.bat  README.md
D2.Detours.patches/1.10f/: Fog.patch.cpp
D2.Detours.patches/1.13c/: D2Common.patch.cpp  D2Common_ResolveTable.gen.h  D2Common_ShadowDispatch.gen.h  D2Debugger.patch.cpp  D2Debugger.patch.rc  D2Game.patch.cpp  Fog.patch.cpp  LiveDispatch_CoordFamily.h  LiveDispatch_Generic.h
conformance/: CONFORMANCE_TAXONOMY.md  CONFORMANCE_WORKFLOW.md  CONF_REGRESSION_OFFLINE_SUITE.md  D2COMMON_FULL_SHADOW_PLAN.md  DATATABLE_CONFORMANCE_PLAN.md  DYNAMIC_PROFILER_PLAN.md  FUNDOC_D2MOO_INTEGRATION_PLAN.md  GRADUATED_CONFORMANCE_PIPELINE_PLAN.md  LIVE_DISPATCH_FRAMEWORK_PLAN.md  OPEND2_PD2_INTEGRATION_PLAN.md  ORDINAL_RECONCILIATION.md  PROVE_OPPORTUNITIES_BACKLOG.md  README.md  SHIPPING_PROMOTION_PLAN.md  build.sh  d2moo_conform.cpp  enum_ledger.json  fort_rename_map.json  golden_set.json  lib_fingerprints.json  naming_simplification_map.json  pd2s12_d2client_ordinals.tsv  pd2s12_d2common_ordinals.tsv  pd2s12_d2game_ordinals.tsv  proven_functions.jsonl  registry.json  shadow_batch_pending.json  shadow_manifest.json  struct_field_ledger.json
conformance/behavioral/: README.md  behav_match.py  captured_vectors.jsonl  compare_fp.py  d2moo_datatables.json  d2moo_experience.json  d2moo_fingerprint.cpp  d2moo_fp.json  d2moo_loader_harness.cpp  pd2_datatables.json  pd2_experience.json  pd2_fp.json  pd2_frida_agent.js  pd2_frida_capture.py  pd2_frida_datatbl.js  pd2_frida_datatbl_capture.py  pd2_frida_rng_capture.py  pd2_frida_rng_family.js  pd2_frida_rng_family.py  pd2_frida_rng_probe.js  pd2_frida_rng_trampoline.js  pd2_frida_rng_vectors.py  pd2_phase0_hook_spike.js  pd2_phase0_spike.py  pd2_rng_confirm.md  pd2_rng_family.json  pd2_rng_vectors.json  requirements-frida.txt  run-capture-session.ps1  run-phase0-spike.ps1  run-phase1-live-dispatch.ps1  run-phase4-panel-check.ps1  run_loader_harness.ps1  start-frida-oracle.ps1
conformance/benchmark/: BASELINE_score_2026-07-09.json  D2COMMON_BASELINE_2026-07-09.md  D2COMMON_NAMING_2026-07-09.md  README.md  build.bat  d2common_answer.json  d2common_score.json
conformance/corrected_defs/: D2Common.1.13c.corrected.def  D2Game.1.13c.corrected.def
conformance/corrected_maps/: D2CMP.tsv  D2Common.tsv  D2Game.tsv  D2Gfx.tsv  D2Lang.tsv  D2MCPClient.tsv  D2Net.tsv  D2Sound.tsv  D2Win.tsv  Fog.tsv  README.md  Storm.tsv
conformance/d2debugger_mcp/: README.md  server.py
conformance/doc_ledger/: ItemData.jsonl  ItemData__lvl0.jsonl  ItemRecord.jsonl  ItemRecord__lvl0.jsonl  ItemTypeData.jsonl  ItemTypeData__lvl1.jsonl  MissileData.jsonl  MissileData__lvl1.jsonl  unattributed.jsonl  unattributed__lvl1.jsonl
conformance/golden_snapshots/: BASELINE_2026-07-09.md  DATATBLS_GetItemTypeField10.json  DATATBLS_GetItemTypeField10.report.json  DATATBLS_GetMissileParamShort0x10.json  DATATBLS_GetMissileParamShort0x10.report.json  ITEMS_GetItemDataField32.json  ITEMS_GetItemDataField32.report.json  ITEMS_GetItemRecordField104.json  ITEMS_GetItemRecordField104.report.json  SKILLS_GetSkillNodePos1.json  SKILLS_GetSkillNodePos1.report.json  STAT_GetUnitStatDirect.json  STAT_GetUnitStatDirect.report.json  UNIT_GetBlockingSize.json  UNIT_GetBlockingSize.report.json
conformance/pd2_memdiff/: PD2_loading_and_antitamper_report.md  README.md  all_patch_sites.csv  clean_pd2_patch_sites.csv  diff_rig.json  ondisk_vs_vanilla_1.13c.csv  pd2_d2common_memdiff.csv  perdll_rollup.json
conformance/profiler/: D2CMP.functions.tsv  D2Common.functions.tsv  D2Game.functions.tsv  D2Gfx.functions.tsv  D2Lang.functions.tsv  D2MCPClient.functions.tsv  D2Net.functions.tsv  D2Sound.functions.tsv  D2Win.functions.tsv  Fog.functions.tsv  Storm.functions.tsv  batch_assess_results.json  cold_imported_classified.json  conf_regression_candidates.json  d2common_external_imports.json  external_import_recheck.json  hit_profile_2026-07-08.json  hit_profile_snapshot.json  hot_backlog.json  port_plan.json  requeued_prefix_casualties.json  shadow_batch_triage.json  shadow_leaf_backlog.jsonl  triage_backlog.json  triage_globals_backlog.json
conformance/regression/: coord_family.cases.json  getpathfield.cases.json  pathgetters_terminal.cases.json  town_levelid.cases.json
conformance/reimpl_provider/: coord_provider.cpp  provider_runtime.cpp  provider_runtime.h
conformance/tools/: apply_naming_simplification.py  build_profiler_tables.py  build_registry.py  capture_to_corpus.py  check_consistency.py  conformance_doctor.py  dump_exports.py  freeze_corpus.py  gen_corrected_def.py  gen_corrected_map.py  gen_naming_simplification_map.py  gen_offline_tests.py  gen_resolve_table.py  gen_shadow_dispatch.py  live_patch_scan.py  migrate_registry_names.py  pending_globals.json  profiler_feed.py  prove_all.py  prove_candidate.py  run_conformance_batch.py  scope_tag_library.py  sync_conformance_to_ghidra.py  triage.py
conformance/vectors/: DATATBLS_GetBinkBufferErrorCode.spec.json  DATATBLS_GetBodyLocPropertyByte.spec.json  DATATBLS_GetBodyLocationProperty.spec.json  DATATBLS_GetCharCompositDualRecord.spec.json  DATATBLS_GetDataTableRowEntryCount.spec.json  DATATBLS_GetDualTableRecord0x34_C.spec.json  DATATBLS_GetInventoryRecord788Field.spec.json  DATATBLS_GetItemDataByCode.spec.json  DATATBLS_GetItemPropertyRecord0x94.spec.json  DATATBLS_GetItemStatCostTxtRecord.spec.json  DATATBLS_GetItemStorePage.spec.json  DATATBLS_GetItemTypeClass.spec.json  DATATBLS_GetSafeUint.spec.json  (+145 more)
doc/: Debugging.md  NamingSimplification.md  Patching.md
source/D2Debugger/: CMakeLists.txt
source/D2Debugger/include/: D2Debugger.h  D2Debugger.patch.common.h
source/D2Debugger/src/: D2Debugger.Game.cpp  D2Debugger.LiveDispatch.cpp  D2Debugger.action.cpp  D2Debugger.capture.cpp  D2Debugger.cpp  D2Debugger.gtqueue.cpp  D2Debugger.imgui.d3d9.cpp  D2Debugger.mcp.cpp  D2Debugger.oracle.cpp  D2Debugger.overlay.gl.cpp  D2Debugger.patch.common.cpp  D2Debugger.profiler.cpp
tools/: extract_known_functions.py
(+665 files in other folders)
